# flowlines

./: Cargo.toml  README.md  build_flowlines_py.sh  build_pyflowlines.sh  run.py
examples/: run.py
flowlines/: Cargo.toml
flowlines/src/: lib.rs  main.rs
flowlines/tests/: integration_tests.rs
flowlines_py/: Cargo.toml  flowlines_py.pyi
flowlines_py/src/: lib.rs
flowlines_rs/: Cargo.toml
flowlines_rs/src/: lib.rs  main.rs
pyflowlines/: Cargo.toml
pyflowlines/src/: lib.rs
src/: lib.rs  main.rs
test_data/: create_test_data.py  load_oscar.py  pyproject.toml
