[package]
name = "flowlines_py"
version = "0.1.0"
edition = "2024"

[lib]
name = "flowlines_py"
crate-type = ["cdylib"]

[dependencies]
flowlines_rs = { path = "../flowlines_rs" }
pyo3 = { version = "0.24.0", features = ["extension-module", "abi3-py37"] }
geo = "0.30.0"
image = "0.25.5"
numpy = "0.24.0"
ndarray-image = "0.3.0"
